--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">
+                            <a class="nav-link text-dark" href="{% url 'offers' %}">
                                 <i class="fas fa-gifts"></i>
                                 Oferte si Promotii
                             </a>
