Created Bag app

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}" >Grupo Pierola Romania</a>
                 <ul class="navbar-nav font-header">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link text-dark" href="{% url 'bag' %}">0.00 RON <i class="fas fa-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
