--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,4 +2,7 @@
 {% load static %}
 {% block content %}
 <h2> Here is your bag </h2>
+{% for item in bag_items %}
+    {{item}}
+{% endfor %}
 {% endblock %}
