--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,19 +1,21 @@
 {% extends "base.html" %}
+{% load bag_tools %}
 {% load static %}
 {% block content %}
 <h2> Here is your bag </h2>
 <div class="container">
     <div class="row">
-        <div class="col-2">Image</div>
-        <div class="col-4 mx-auto">Name</div>
-        <div class="col-2 mx-auto">Quantity</div>
-        <div class="col-2 mx-auto">Price</div>
-        <div class="col-2 mx-auto">Subtotal</div>
+        <div class="col-2 ">Image</div>
+        <div class="col-4 text-center">Name</div>
+        <div class="col-2 text-center">Quantity</div>
+        <div class="col-2 text-center">Price</div>
+        <div class="col-2 text-center">Subtotal</div>
     </div>
-<hr>
+
 {% for item in bag_items %}
+<hr>
     <div class="row">
-        <div class="col-2">
+        <div class="col-2 mx-auto">
             {% if item.wine.image %}
                 <img src="{{item.wine.image.url}}" class="mx-auto" style="height:9rem; width:3rem;" alt="{{wine.name}}">
             {% else %}
@@ -21,11 +23,11 @@
             {% endif %}
         </div>
         <div class="col-4 my-auto">
-            <p>{{item.wine.name}}</p>
-            <p>{{item.size}}</p>
+            <p><strong>{{item.wine.name}}</strong></p>
+            <p><strong>{{item.size}}</strong></p>
         </div>
         <div class="col-2 my-auto">
-            <form method="POST" action="{% url 'edit_bag' item.wine.id %}" id="form_{{ item.wine.id }}">
+            <form method="POST" action="{% url 'edit_bag' item.wine.id %}">
                     {% csrf_token %}
             <div class="input-group input-group-sm">
                 <div class="input-group-preppend">
@@ -48,19 +50,19 @@
                 </div>                  
             </div>
              </form>
-            <p class="mx-auto">
-                <a class="text-decoration-none text-info update_link" 
-                id="{{item.wine.id}}">Update</a>
-            </p>
+            <a class="text-decoration-none text-info update_link" >
+                    Update
+            </a>
         </div>
-        <div class="col-2 my-auto">{{item.wine.price}}</div>
-        <div class="col-2 my-auto">Se calculeaza</div>
+        <div class="col-2 my-auto text-center"><strong>{{item.wine.price}}</strong></div>
+        <div class="col-2 my-auto text-center"><strong>{{item.wine.price|calc_subtotal:item.qty}}</strong></div>
     </div>
+    <hr>
 {% endfor %}
 <hr>
 <div class="row">
     <div class="col-2 mx-auto">
-        <a href="#" class="btn btn-info rounded-0">CHECKOUT <i class="fas fa-chevron-right "></i></a>
+        <a href="{% url 'checkout' %}" class="btn btn-info rounded-0"><strong>CHECKOUT    </strong><i class="fas fa-chevron-right"></i></a>
     </div>
 </div>
 </div>
@@ -69,8 +71,8 @@
 <script type="text/javascript">
     // function that enables or disable the buttons
 $('.update_link').click(function(e){
-    var formId = $(this).attr("id");
-    var form = $(`#form_${formId}`);
+    var form = $(this).prev();
+    console.log(form);
     form.submit();
 })
 function handleEnableDisable(itemId){
