--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<h2> Here is your checkout </h2>
+<div class="container">
+<h1> Checkout </h1>
+<div class="row">
+    <div class="col-6">
+        <!--Delivery Address-->
+        <div class="row">
+            
+        </div>
+    </div>
+    <div class="col-6">
+        <!--Order Details-->
+        <div class="row">
+
+        </div>
+    </div>
+</div>
+</div>
+
 {% endblock %}
