--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto&display=swap');
 body{
-    margin-top: 6rem;
     font-family: 'Roboto', 'sans-serif';
-
 }
 .font-header{
     font-family: 'Roboto', sans-serif;
@@ -25,6 +23,9 @@ body{
 .wine-color:hover{
     background-color: #fff;
     color: #000;
+}
+.content-zone{
+    margin-top:8rem;
 }
 @media (max-width: 768px){
     body{
