--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -57,8 +57,8 @@
                     Update
             </a>
         </div>
-        <div class="col-2 my-auto text-center"><strong>{{item.wine.price}} RON</strong></div>
-        <div class="col-2 my-auto text-center"><strong>{{item.wine.price|calc_subtotal:item.qty}} RON</strong></div>
+        <div class="col-2 my-auto text-center"><strong>{{item.price}} RON</strong></div>
+        <div class="col-2 my-auto text-center"><strong>{{item.price|calc_subtotal:item.qty}} RON</strong></div>
     </div>
     <hr>
 {% endfor %}
