--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% load static%}
 {% block content%}
-<h1>Contact</h1>
+<div class="container">
+    <h1>Contact</h1>
+    <hr>
+    <div>Email: <strong>grupo.pierola.ro@gmail.com</strong></div>
+    <div>Numar de telefon: <strong>0744924342</strong></div>
+</div>
 {% endblock%}
