--- a/wines/templates/wines/wines.html
+++ b/wines/templates/wines/wines.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <!-- Filter -->
-<div class="pb-2 wine-filter-menu bg-danger fixed-top rounded d-none" id="filter">
+<div class="pb-2 wine-filter-menu fixed-top rounded" id="filter">
     <h4 class="text-center my-2">Ordoneaza dupa</h4>
     <div class="container-fluid">
         <div class="row mb-1">
