--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -3,11 +3,11 @@
 {% load static %}
 {% block content %}
 <div class="container">
-<h1> Cosul tau de cumparaturi </h1>
+<h1 class="mb-3"> Cosul tau de cumparaturi </h1>
 {% if not bag_items %}
     <p class="my-auto mx-auto">Cosul de cumparaturi este gol. <a class="link link-danger" href="{% url 'wines_view' %}">Descopera vinurile Grupo Pierola</a></p>
 {% else %}
-    <div class="row">
+    <div class="row mb-2 shadow">
         <div class="col-2 ">Image</div>
         <div class="col-4 text-center">Name</div>
         <div class="col-2 text-center">Quantity</div>
@@ -16,8 +16,7 @@
     </div>
 
 {% for item in bag_items %}
-<hr>
-    <div class="row">
+    <div class="row pb-2 shadow">
         <div class="col-2 mx-auto">
             {% if item.wine.image %}
                 <img src="{{item.wine.image.url}}" class="mx-auto" style="height:9rem; width:3rem;" alt="{{wine.name}}">
@@ -31,27 +30,8 @@
         </div>
         <div class="col-2 my-auto">
             <form method="POST" action="{% url 'edit_bag' item.wine.id %}">
-                    {% csrf_token %}
-            <div class="input-group input-group-sm">
-                <div class="input-group-preppend">
-                    <button 
-                    class="decrement-qty btn btn-dark rounded-0 btn-sm" data-item_id="{{ item.wine.id }}" 
-                    id="decrement-qty_{{ item.wine.id }}">
-                    <i class="fas fa-minus"></i>
-                    </button>
-                </div>
-                    <input class="form-control qty_input text-center" type="number" value="{{item.qty}}" min="0" max="99" id="id_input_{{item.wine.id}}" name="quantity" data-item_id="{{item.wine.id}}">
-                    <input type="hidden" value="{{item.size}}" name="size">
-               
-                <div class="input-group-append mr-1">
-                    <button 
-                    class="increment-qty btn btn-dark rounded-0 btn-sm" 
-                    data-item_id="{{ item.wine.id }}" 
-                    id="increment-qty_{{ item.wine.id }}">
-                    <i class="fas fa-plus"></i>
-                    </button>
-                </div>                  
-            </div>
+                {% csrf_token %}
+                {% include 'wines/includes/qty_input.html' %}
              </form>
             <a class="text-decoration-none text-info update_link" >
                     Update
@@ -60,9 +40,8 @@
         <div class="col-2 my-auto text-center"><strong>{{item.price}} RON</strong></div>
         <div class="col-2 my-auto text-center"><strong>{{item.price|calc_subtotal:item.qty}} RON</strong></div>
     </div>
-    <hr>
 {% endfor %}
-<div class="row d-flex justify-content-end">
+<div class="row d-flex justify-content-end mb-2">
     <div class="col-2">
         <div class="row">
             <div class="col-4"><small>Total:</small></div>
@@ -70,7 +49,6 @@
         </div>
     </div>
 </div>
-<hr>
 <div class="row d-flex justify-content-center">
     <div class="col-2 ml-auto ">
         <a href="{% url 'wines_view' %}" class="btn btn-dark rounded-0 w-100"><i class="fas fa-chevron-left"></i><strong>  INCA CEVA</strong></a>
