--- a/offers/templates/offers/offers.html
+++ b/offers/templates/offers/offers.html
@@ -8,9 +8,10 @@
         <div class="row">
             <div class="col-12">
                 <h1>Oferte</h1>
+                <hr>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
             {% if available_offers %}
                 <h3>Oferte in curs</h3>
             {% for offer in available_offers %}
@@ -20,7 +21,7 @@
                         <h1 class="display-4">{{offer.title}}</h1>
                     <p class="lead">{{offer.hook}}</p>
                      <p class="lead">
-                        <a class="btn btn-primary btn-lg float-right" href="{% url 'offer_details' offer.id %}" role="button">Afla mai multe</a>
+                        <a class="btn btn-danger btn-lg float-right border-dark rounded-0 " href="{% url 'offer_details' offer.id %}" role="button">Afla mai multe <i class="fas fa-chevron-right"></i></a>
                     </p>
                     </div>
                 </div>
